
  [ Julian Andres Klode ]
  * apt/auth.py:
    - Use tempfile.NamedTemporaryFile to create temporary file
    - Use Popen.communicate() instead of stdin, stdout
  * tests/fakeroot-apt-key:
    - exec apt-key, otherwise we ignore the return value
  * debian/control:
    - Build-depend on fakeroot, needed for the apt.auth tests
  * data/templates/Debian.info.in:
    - Add wheezy
  * po:
    - Fixup the translations for wheezy again

 -- Michael Vogt <mvo@debian.org>  Mon, 25 Jun 2012 13:41:02 +0200

python-apt (0.8.5) unstable; urgency=low

  [ Michael Vogt ]
  * python/cache.cc:
    - ensure that pkgApplyStatus is called when the cache is opened
      (thanks to Sebastian Heinlein for finding this bug), LP: #659438

  [ Stéphane Graber ]
  * data/templates/Ubuntu.info.in:
    - add quantal

  [ Steve Langasek ]
  * utils/get_ubuntu_mirrors_from_lp.py: move this script to python3
  * pre-build.sh: call dpkg-checkbuilddeps with the list of our 
    source-build-dependencies; this may save someone else an hour down the
    line scratching their head over gratuitous test-suite failures...
  
  [ Sebastian Heinlein ]
  * lp:~glatzor/python-apt/auth:
    - this is a port of the software-properties AptAuth module to python-apt
      with some cleanups. It provides a wrapper API for the apt-key command

  [ David Prévot ]
  * po/*.po: update PO files against current POT file
  * po/be.po: Belarusian translation by Viktar Siarheichyk (closes: #678286)
  * po/de.po: German translation updated by Holger Wansing (closes: #677916)
  * po/el.po: Greek translation updated by Thomas Vasileiou (closes: #677331)
  * po/en_GB.po: Remove useless file <20120610190618.GA1387@burratino>
  * po/eo.po: Esperanto translation by Kristjan Schmidt and Michael Moroni
  * po/fi.po: Finnish translation updated by Timo Jyrinki
  * po/fr.po: French translation updated (closes: #567765)
  * po/hu.po: Hungarian translation updated by Gabor Kelemen